Eigenvalue für 2x2 Matrizen hinzugefuegt

--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -6,40 +6,21 @@
     "collapsed": true
    },
    "source": [
-    "Assignment 1"
+    "# Assignment 1"
    ]
-  },
-  {
-   "cell_type": "heading",
-   "level": 3,
-   "metadata": {},
-   "source": [
-    "2. Eigenvalue Decomposition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2. Eigenvalue Decomposition"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "heading",
-   "level": 3,
-   "metadata": {},
    "source": [
-    "(a) Compute the eigenvalue decomposition A = QΛQ^T with Λ = diag(λ_1 , λ_2)."
+    "### (a) Compute the eigenvalue decomposition A = QΛQ^T with Λ = diag(λ_1 , λ_2)."
    ]
   },
   {
@@ -50,12 +31,72 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "A = [[1.75, -(np.sqrt(3)/4)],\n",
-    "     [-(np.sqrt(3)/4), 1.25]]\n",
+    "A = 1/4* np.array([[7, -np.sqrt(3)],\n",
+    "                   [-np.sqrt(3), 5]])\n",
     "\n",
     "# calculate eigenvalues & eigenvectors\n",
     "# eigenvalues: [2, 1]\n",
-    "values, vectors = np.linalg.eig(A)\n",
+    "# values, vectors = np.linalg.eig(A)\n",
+    "\n",
+    "# find eigenvalues\n",
+    "def pq_formula(p, q):\n",
+    "    p_half = -p/2\n",
+    "    sqrt = np.sqrt(p_half**2 - q)\n",
+    "    lamda_1 = p_half + sqrt \n",
+    "    lamda_2 = p_half - sqrt\n",
+    "    return np.array([lamda_1, lamda_2])\n",
+    "\n",
+    "def eigenvalues(matrix):\n",
+    "    # check if 2x2\n",
+    "    a = matrix[0,0]\n",
+    "    b = matrix[0,1]\n",
+    "    c = matrix[1,0]\n",
+    "    d = matrix[1,1]\n",
+    "    \n",
+    "    p = -(a+d)\n",
+    "    q = a*d-b*c\n",
+    "    \n",
+    "    eigenvals = pq_formula(p, q)\n",
+    "    \n",
+    "    return eigenvals\n",
+    "\n",
+    "eigenvalues_of_A = eigenvalues(A)\n",
+    "print(\"eigenvalues(A):\", eigenvalues_of_A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eigenvalues(A): [ 2.  1.]\n",
+      "[[ 0.  0.]\n",
+      " [ 0.  0.]]\n",
+      "dot_product: 0\n",
+      "B:  [[ 1.75      -0.4330127]\n",
+      " [-0.4330127  1.25     ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "find eigenvectors\n",
+    "def eigenvectors(matrix, eigenvals):\n",
+    "    for eigenval in eigenvals:\n",
+    "        B = matrix\n",
+    "        B[0,0] -= eigenval\n",
+    "        B[1,1] -= eigenval\n",
+    "        b_22_prime = B[1,1]*B[0,0] - B[0,1] * B[1,0]\n",
+    "        \n",
+    "        if b_22_prime < 0.00001:\n",
+    "            x_2 = 1\n",
+    "        else:\n",
+    "            x_2 = 0\n",
+    "        x_1 = \n",
+    "\n",
     "\n",
     "Q = vectors\n",
     "\n",
@@ -64,16 +105,81 @@
     "np.fill_diagonal(V,values)\n",
     "\n",
     "# recreate A\n",
+    "\n",
+    "def dot_product(matrix_A, matrix_B):\n",
+    "    matrix_temp = np.zeros((2,2))\n",
+    "    print(matrix_temp)\n",
+    "    \n",
+    "    return 0\n",
+    "\n",
+    "print(\"dot_product:\",dot_product(1,1))\n",
+    "\n",
+    "\n",
     "B = np.dot(np.dot(Q,V), np.transpose(Q))\n",
-    "print(B)"
+    "print(\"B: \", B)"
    ]
   },
   {
-   "cell_type": "heading",
-   "level": 3,
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "polynomial() missing 1 required positional argument: 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-c1a2ea8f0286>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpolynomial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf_coeff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0mf_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: polynomial() missing 1 required positional argument: 'x'"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def dx(f, x):\n",
+    "    return abs(0-f(x))\n",
+    " \n",
+    "def newtons_method(f, df, x0, e):\n",
+    "    delta = dx(f, x0)\n",
+    "    while delta > e:\n",
+    "        x0 = x0 - f(x0)/df(x0)\n",
+    "        delta = dx(f, x0)\n",
+    "    print('Root is at: ', x0)\n",
+    "    print('f(x) at root is: ', f(x0))\n",
+    "\n",
+    "\n",
+    "def polynomial(coeffs, x):    \n",
+    "    value = 0\n",
+    "    x_exp = 1\n",
+    "    for coeff in coeffs:\n",
+    "        value += coeff * x_exp\n",
+    "        x_exp *= x\n",
+    "    return value\n",
+    "        \n",
+    "f_coeff =  [1, 2]\n",
+    "\n",
+    "x = 2\n",
+    "\n",
+    "f = polynomial(f_coeff)\n",
+    "f_1 = f(x)\n",
+    "\n",
+    "plt.plot(f_1)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "print(\"f_1: \", f_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) Show that the columns of Q are orthonormal, i.e. the columns are of unit length and orthogonal."
+    "### (b) Show that the columns of Q are orthonormal, i.e. the columns are of unit length and orthogonal."
    ]
   },
   {
@@ -97,11 +203,10 @@
    ]
   },
   {
-   "cell_type": "heading",
-   "level": 3,
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Show that the matrix QΛ^(-1)Q^T is the inverse of A "
+    "## c) Show that the matrix $QΛ^{-1}Q^T$ is the inverse of A "
    ]
   },
   {
@@ -127,24 +232,15 @@
    ]
   },
   {
-   "cell_type": "heading",
-   "level": 4,
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Vector Norms"
-   ]
-  },
-  {
-   "cell_type": "heading",
-   "level": 4,
-   "metadata": {},
-   "source": [
-    "(a) Compute the ||·||_1 , ||·||_2 , ||·||_8 and ||·||_∞ norms of the following vectors:"
+    "## 4. Vector Norms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -205,32 +301,8 @@
    ]
   },
   {
-   "cell_type": "heading",
-   "level": 3,
-   "metadata": {},
-   "source": [
-    "b) TODO: Draw set of points ||x||_i = 1 for i{1,2,8,infinite} and x ∈ R²"
-   ]
-  },
-  {
-   "cell_type": "heading",
-   "level": 1,
-   "metadata": {},
-   "source": [
-    "5. Special Orthorgonal Matrices"
-   ]
-  },
-  {
-   "cell_type": "heading",
-   "level": 1,
-   "metadata": {},
-   "source": [
-    "(a) Compute Determinante, Trace and eigenvalues"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -257,58 +329,61 @@
     "print(determinant(C))\n",
     "print(trace(C))\n",
     "\n",
-    "# TODO: eigvalues = np.linalg.eig(C)?\n",
+    "# eigvalues = np.linalg.eig(C)?\n",
     "\n"
    ]
   },
   {
-   "cell_type": "heading",
-   "level": 2,
-   "metadata": {},
-   "source": [
-    "(b) Compute A_prime = Q · A · Q^T , det(A_prime), Tr(A_prime) and its eigenvalues for α = π / 12 ."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3. 1.]\n",
-      " [1. 3.]]\n",
+      "[[ 3.  1.]\n",
+      " [ 1.  3.]]\n",
       "6.0\n",
-      "8.000000000000002\n",
-      "[[2.00000000e+00 2.22044605e-16]\n",
-      " [4.44089210e-16 4.00000000e+00]]\n"
+      "8.0\n",
+      "eigenvalues(A_prime(a_1): [ 4.  2.]\n",
+      "[[  2.00000000e+00   2.22044605e-16]\n",
+      " [  4.44089210e-16   4.00000000e+00]]\n"
      ]
     }
    ],
    "source": [
+    "import math\n",
+    "\n",
     "def Q(a):\n",
-    "    return [[m.cos(a), -m.sin(a)],\n",
-    "            [m.sin(a), m.cos(a)]]\n",
+    "    return [[math.cos(a), -math.sin(a)],\n",
+    "            [math.sin(a), math.cos(a)]]\n",
     "\n",
     "def A_prime(a):\n",
     "    return np.dot((np.dot(Q(a),(C))),\n",
     "                  (np.transpose(Q(a))))\n",
     "\n",
-    "a_1 = m.pi/12\n",
+    "a_1 = math.pi/12\n",
     "print(A_prime(a_1))\n",
     "print(trace(A_prime(a_1)))\n",
     "print(determinant(A_prime(a_1)))\n",
+    "print(\"eigenvalues(A_prime(a_1):\", eigenvalues(A_prime(a_1)))\n",
     "# TODO: Eigenvalues for A_prime\n",
     "\n",
     "\n",
     "# (c) What would A_prime be for α = π / 3?\n",
     "    \n",
-    "import math as m\n",
-    "a_2 = m.pi/3\n",
+    "\n",
+    "a_2 = math.pi/3\n",
     "print(A_prime(a_2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
