--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Group Members\n",
+    "\n",
+    "* Juliane Weilbach\n",
+    "* Amadeus Hovekamp\n",
+    "* Megan Klaiber"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -10,17 +21,41 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 2. Eigenvalue Decomposition"
+    "import numpy as np\n",
+    "from math import sqrt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a) Compute the eigenvalue decomposition A = QΛQ^T with Λ = diag(λ_1 , λ_2)."
+    "### 1. Jupyter Notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(d)** It's useful for people who didn't work with jupyter notebooks yet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Eigenvalue Decomposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (a) Compute the eigenvalue decomposition A = QΛQ^T with Λ = diag(λ_1 , λ_2)."
    ]
   },
   {
@@ -29,16 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "A = 1/4* np.array([[7, -np.sqrt(3)],\n",
-    "                   [-np.sqrt(3), 5]])\n",
-    "\n",
-    "# calculate eigenvalues & eigenvectors\n",
-    "# eigenvalues: [2, 1]\n",
-    "# values, vectors = np.linalg.eig(A)\n",
-    "\n",
-    "# find eigenvalues\n",
+    "# calculate eigenvalues\n",
     "def pq_formula(p, q):\n",
     "    p_half = -p/2\n",
     "    sqrt = np.sqrt(p_half**2 - q)\n",
@@ -47,21 +73,59 @@
     "    return np.array([lamda_1, lamda_2])\n",
     "\n",
     "def eigenvalues(matrix):\n",
-    "    # check if 2x2\n",
-    "    a = matrix[0,0]\n",
-    "    b = matrix[0,1]\n",
-    "    c = matrix[1,0]\n",
-    "    d = matrix[1,1]\n",
-    "    \n",
-    "    p = -(a+d)\n",
-    "    q = a*d-b*c\n",
-    "    \n",
-    "    eigenvals = pq_formula(p, q)\n",
-    "    \n",
-    "    return eigenvals\n",
+    "    # check if matrix is quadratic and a 2x2 matrix\n",
+    "    dim = np.shape(matrix)\n",
+    "    if dim[0] != dim[1]:\n",
+    "        return 'Matrix is not quadratic!'\n",
+    "    elif dim[0] != 2:\n",
+    "        return 'Matrix is not a 2x2 Matrix!'\n",
+    "    else:\n",
+    "        a = matrix[0,0]\n",
+    "        b = matrix[0,1]\n",
+    "        c = matrix[1,0]\n",
+    "        d = matrix[1,1]\n",
     "\n",
-    "eigenvalues_of_A = eigenvalues(A)\n",
-    "print(\"eigenvalues(A):\", eigenvalues_of_A)"
+    "        p = -(a+d)\n",
+    "        q = a*d-b*c\n",
+    "\n",
+    "        eigenvals = pq_formula(p, q)\n",
+    "    \n",
+    "        print('Eigenvalues:\\n', eigenvals)\n",
+    "        return eigenvals\n",
+    "\n",
+    "# compute eigenvectors\n",
+    "def eigenvectors(matrix, eigenvalues):\n",
+    "    \n",
+    "    \n",
+    "    return\n",
+    "\n",
+    "# compute eigenvalue decomposition\n",
+    "def eigenvalue_decomposition(matrix):\n",
+    "    print('Matrix:\\n', matrix)\n",
+    "    \n",
+    "    # check if matrix is quadratic and a 2x2 matrix\n",
+    "    dim = np.shape(matrix)\n",
+    "    if dim[0] != dim[1]:\n",
+    "        return 'Matrix is not quadratic!'\n",
+    "    elif dim[0] != 2:\n",
+    "        return 'Matrix is not a 2x2 Matrix!'\n",
+    "    else:\n",
+    "        # compute eigenvalues\n",
+    "        values = eigenvalues(matrix)\n",
+    "        # compute eigenvectors\n",
+    "        vectors = eigenvectors(matrix,values)\n",
+    "\n",
+    "        Q = eigenvectors\n",
+    "        Lambda = np.diag(eigenvalues)\n",
+    "\n",
+    "        print('\\nDiagonal matrix Lambda with eigenvalues:\\n', Lambda, '\\n\\nMatrix Q with eigenvectors as columns:\\n', Q)\n",
+    "\n",
+    "        print('\\nSo A = Q * Lambda * Q.T:\\n',Q * Lambda * np.transpose(Q))\n",
+    "\n",
+    "    \n",
+    "A = 1/4 * np.matrix([[7, -sqrt(3)], [-sqrt(3), 5]])\n",
+    "eigenvalue_decomposition(A)\n",
+    "\n"
    ]
   },
   {
@@ -83,7 +147,7 @@
     }
    ],
    "source": [
-    "find eigenvectors\n",
+    "#find eigenvectors\n",
     "def eigenvectors(matrix, eigenvals):\n",
     "    for eigenval in eigenvals:\n",
     "        B = matrix\n",
@@ -402,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
