--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -20,19 +20,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a) Compute the eigenvalue decomposition A = QΛQ^T with Λ = diag(λ_1 , λ_2)."
+    "### (a) Compute the eigenvalue decomposition A = $QΛQ^T$ with $Λ = diag(λ_1 , λ_2)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eigenvalues(A): [ 2.  1.]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "A = 1/4* np.array([[7, -np.sqrt(3)],\n",
     "                   [-np.sqrt(3), 5]])\n",
+    "\n",
+    "# A = np.array([[1, 0], [0,1]])\n",
     "\n",
     "# calculate eigenvalues & eigenvectors\n",
     "# eigenvalues: [2, 1]\n",
@@ -66,40 +76,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eigenvalues(A): [ 2.  1.]\n",
-      "[[ 0.  0.]\n",
-      " [ 0.  0.]]\n",
-      "dot_product: 0\n",
-      "B:  [[ 1.75      -0.4330127]\n",
-      " [-0.4330127  1.25     ]]\n"
+      "Q: [[ 0.8660254 -0.5      ]\n",
+      " [-0.5       -0.8660254]]\n",
+      "v: [ 0.8660254 -0.5      ]\n",
+      "|v|: 1.0\n",
+      "eigval [ 2.  1.]\n",
+      "eigvec: [[ 0.8660254  0.5      ]\n",
+      " [-0.5        0.8660254]]\n"
      ]
     }
    ],
    "source": [
-    "find eigenvectors\n",
+    "# find eigenvectors\n",
     "def eigenvectors(matrix, eigenvals):\n",
-    "    for eigenval in eigenvals:\n",
-    "        B = matrix\n",
-    "        B[0,0] -= eigenval\n",
-    "        B[1,1] -= eigenval\n",
-    "        b_22_prime = B[1,1]*B[0,0] - B[0,1] * B[1,0]\n",
-    "        \n",
-    "        if b_22_prime < 0.00001:\n",
-    "            x_2 = 1\n",
-    "        else:\n",
-    "            x_2 = 0\n",
-    "        x_1 = \n",
+    "    eigenvec = []\n",
+    "    a = matrix[0,0]\n",
+    "    b = matrix[0,1]\n",
+    "    c = matrix[1,0]\n",
+    "    d = matrix[1,1]\n",
+    "    if(c != 0):\n",
+    "        eigenvec.append([eigenvals[0]-d,c])\n",
+    "        eigenvec.append([eigenvals[1]-d,c])\n",
+    "    elif (b != 0):\n",
+    "        eigenvec.append([b,eigenvals[0] - a])\n",
+    "        eigenvec.append([b,eigenvals[1] - a])\n",
+    "    else:\n",
+    "        eigenvec.append([1,0])\n",
+    "        eigenvec.append([0,1])\n",
+    "    \n",
+    "    # print(\"before scaling:\", eigenvec)\n",
+    "    for eigvec in eigenvec:\n",
+    "        length = np.sqrt(eigvec[0]**2+eigvec[1]**2)\n",
+    "        eigvec[0] /= length\n",
+    "        eigvec[1] /= length\n",
+    "    # print(\"after scaling:\", eigenvec)\n",
+    "    return eigenvec\n",
     "\n",
     "\n",
-    "Q = vectors\n",
+    "Q = np.array(eigenvectors(A, eigenvalues_of_A))\n",
     "\n",
+    "print(\"Q:\", Q)\n",
+    "print(\"v:\", Q[0])\n",
+    "print(\"|v|:\", np.linalg.norm(Q[0]))\n",
+    "\n",
+    "# compare to np.linalg.eig:\n",
+    "eigval, eigvec = np.linalg.eig(A.T)\n",
+    "print(\"eigval\", eigval)\n",
+    "print(\"eigvec:\", eigvec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-40-2440420ed11d>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-2440420ed11d>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    x_1 =\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
     "# Diagonalmatrix\n",
     "V = np.zeros((2,2), int)\n",
     "np.fill_diagonal(V,values)\n",
@@ -140,7 +187,6 @@
     "%matplotlib inline\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "def dx(f, x):\n",
     "    return abs(0-f(x))\n",
     " \n",
@@ -402,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
