Matrix-Multiplication buggt noch

--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -6,9 +6,77 @@
    "source": [
     "#### Group Members\n",
     "\n",
-    "* Juliane Weilbach\n",
-    "* Amadeus Hovekamp\n",
-    "* Megan Klaiber"
+    "* Hovekamp, Amadeus\n",
+    "* Klaiber, Megan\n",
+    "* Weilbach, Juliane"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## matrix multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matrixA\n",
+      " [[2 1]]\n",
+      "dimsA (1, 2)\n",
+      "matrixB\n",
+      " [[2 1 1]\n",
+      " [3 2 3]]\n",
+      "dimsB (2, 3)\n",
+      "Multipling matrices...\n",
+      "C\n",
+      " [[ 0.  0.  0.]]\n",
+      "C_correct\n",
+      " [[7 4 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def matrixMultiplication(matrixA, matrixB):\n",
+    "    dimsA = np.shape(matrixA)\n",
+    "    dimsB = np.shape(matrixB)\n",
+    "    print(\"matrixA\\n\", matrixA)\n",
+    "    print(\"dimsA\", dimsA)\n",
+    "    print(\"matrixB\\n\", matrixB)\n",
+    "    print(\"dimsB\", dimsB)\n",
+    "    if(dimsA[1] != dimsB[0]):\n",
+    "        print(\"Error. Matrix dimensions do not fit!\")\n",
+    "    else:\n",
+    "        print(\"Multipling matrices...\")\n",
+    "        # init result matrix with zeros of correct shape\n",
+    "        matrixC = np.zeros((dimsA[0], dimsB[1]))\n",
+    "        \n",
+    "        for rowA in range(0, dimsA[0]):\n",
+    "            for colB in range(0, dimsB[1]):\n",
+    "                for colA in range(0, dimsA[1]):\n",
+    "                    for rowB in range(0, dimsB[0]):\n",
+    "                        matrixC[rowA, colB] += matrixA[rowA, colA] * matrixB[rowB, colB]\n",
+    "                        print(\"C\\n\", matrixC)                        \n",
+    "        return matrixC\n",
+    "    \n",
+    "A = np.array([[2,1],[1,1],[2,1]])\n",
+    "A_1 = np.array([[2,1]])\n",
+    "B = np.array([[2,1,1],\n",
+    "              [3,2,3]])\n",
+    "\n",
+    "C = matrixMultiplication(A_1, B)\n",
+    "\n",
+    "C_correct = np.matmul(A_1, B)\n",
+    "\n",
+    "\n",
+    "print(\"C\\n\", C)\n",
+    "print(\"C_correct\\n\", C_correct)"
    ]
   },
   {
@@ -22,54 +90,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from math import sqrt"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Jupyter Notebooks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### (a) Compute the eigenvalue decomposition A = $QΛQ^T$ with $Λ = diag(λ_1 , λ_2)$."
+    "# 2. Eigenvalue Decomposition\n",
+    "Given the matrix $A=\\frac{1}{4}\\left[ \\begin{array}{rr}\n",
+    "7 & -\\sqrt{3}  \\\\\n",
+    "\\sqrt{3} & 5  \\\\\n",
+    "\\end{array}\\right]$.\n",
+    "\n",
+    "#### (a) Compute the eigenvalue decomposition $A=QΛQ^T$ with $Λ=diag(λ_1,λ_2)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eigenvalues(A): [ 2.  1.]\n"
+      "Calculated eigenvalues:\n",
+      " [ 2.  1.]\n",
+      "Q:\n",
+      " [[ 0.8660254 -0.5      ]\n",
+      " [-0.5       -0.8660254]]\n",
+      "v:\n",
+      " [ 0.8660254 -0.5      ]\n",
+      "|v|:\n",
+      " 1.0\n",
+      "numpy eigval [ 2.  1.]\n",
+      "numpy eigvec: [[ 0.8660254  0.5      ]\n",
+      " [-0.5        0.8660254]]\n",
+      "Matrix:\n",
+      " [[ 1.75      -0.4330127]\n",
+      " [-0.4330127  1.25     ]]\n",
+      "Calculated eigenvalues:\n",
+      " [ 2.  1.]\n",
+      "\n",
+      "Diagonal matrix Lambda with eigenvalues:\n",
+      " [[ 2.  0.]\n",
+      " [ 0.  1.]] \n",
+      "\n",
+      "Matrix Q with eigenvectors as columns:\n",
+      " [[ 0.8660254 -0.5      ]\n",
+      " [-0.5       -0.8660254]]\n",
+      "\n",
+      "So A = Q * Lambda * Q.T:\n",
+      " [[ 1.75      -0.4330127]\n",
+      " [-0.4330127  1.25     ]]\n",
+      "A\n",
+      " [[ 1.75      -0.4330127]\n",
+      " [-0.4330127  1.25     ]]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "A = 1/4* np.array([[7, -np.sqrt(3)],\n",
-    "                   [-np.sqrt(3), 5]])\n",
-    "\n",
-    "# A = np.array([[1, 0], [0,1]])\n",
-    "\n",
+    "A = 1/4* np.array([[7, -np.sqrt(3)], [-np.sqrt(3), 5]])\n",
+    "identity_matrix = np.array([[1, 0], [0,1]])\n",
     "# calculate eigenvalues & eigenvectors\n",
     "# eigenvalues: [2, 1]\n",
     "# values, vectors = np.linalg.eig(A)\n",
     "\n",
-    "# find eigenvalues\n",
     "def pq_formula(p, q):\n",
     "    p_half = -p/2\n",
     "    sqrt = np.sqrt(p_half**2 - q)\n",
@@ -77,6 +168,7 @@
     "    lamda_2 = p_half - sqrt\n",
     "    return np.array([lamda_1, lamda_2])\n",
     "\n",
+    "# compute eigenvalues\n",
     "def eigenvalues(matrix):\n",
     "    # check if matrix is quadratic and a 2x2 matrix\n",
     "    dim = np.shape(matrix)\n",
@@ -95,63 +187,83 @@
     "\n",
     "        eigenvals = pq_formula(p, q)\n",
     "    \n",
-    "        print('Eigenvalues:\\n', eigenvals)\n",
+    "        print('Calculated eigenvalues:\\n', eigenvals)\n",
     "        return eigenvals\n",
     "\n",
     "# compute eigenvectors\n",
-    "def eigenvectors(matrix, eigenvalues):\n",
+    "def eigenvectors(matrix, eigenvals):\n",
+    "    eigenvec = []\n",
+    "    a = matrix[0,0]\n",
+    "    b = matrix[0,1]\n",
+    "    c = matrix[1,0]\n",
+    "    d = matrix[1,1]\n",
+    "    if(c != 0):\n",
+    "        eigenvec.append([eigenvals[0]-d,c])\n",
+    "        eigenvec.append([eigenvals[1]-d,c])\n",
+    "    elif (b != 0):\n",
+    "        eigenvec.append([b,eigenvals[0] - a])\n",
+    "        eigenvec.append([b,eigenvals[1] - a])\n",
+    "    else:\n",
+    "        eigenvec.append([1,0])\n",
+    "        eigenvec.append([0,1])\n",
     "    \n",
-    "    \n",
-    "    return\n",
+    "    # print(\"before scaling:\", eigenvec)\n",
+    "    for eigvec in eigenvec:\n",
+    "        length = np.sqrt(eigvec[0]**2+eigvec[1]**2)\n",
+    "        eigvec[0] /= length\n",
+    "        eigvec[1] /= length\n",
+    "    # print(\"after scaling:\", eigenvec)\n",
+    "    return eigenvec\n",
     "\n",
-    "# compute eigenvalue decomposition\n",
-    "def eigenvalue_decomposition(matrix):\n",
-    "    print('Matrix:\\n', matrix)\n",
-    "    \n",
+    "def is_2x2_matrix(matrix):\n",
     "    # check if matrix is quadratic and a 2x2 matrix\n",
     "    dim = np.shape(matrix)\n",
     "    if dim[0] != dim[1]:\n",
-    "        return 'Matrix is not quadratic!'\n",
+    "        print('Matrix is not quadratic!')\n",
+    "        return False\n",
     "    elif dim[0] != 2:\n",
-    "        return 'Matrix is not a 2x2 Matrix!'\n",
+    "        print('Matrix is not a 2x2 Matrix!')\n",
+    "        return False\n",
     "    else:\n",
+    "        return True\n",
+    "    \n",
+    "# compute eigenvalue decomposition\n",
+    "def eigenvalue_decomposition(matrix):\n",
+    "    print('Matrix:\\n', matrix)\n",
+    "    if(is_2x2_matrix(matrix)):\n",
     "        # compute eigenvalues\n",
     "        values = eigenvalues(matrix)\n",
+    "        \n",
     "        # compute eigenvectors\n",
-    "        vectors = eigenvectors(matrix,values)\n",
-    "\n",
-    "        Q = eigenvectors\n",
-    "        Lambda = np.diag(eigenvalues)\n",
-    "\n",
+    "        vectors = eigenvectors(matrix, values)\n",
+    "        \n",
+    "        Lambda = np.diag(values)\n",
+    "        Q = np.array(vectors)\n",
     "        print('\\nDiagonal matrix Lambda with eigenvalues:\\n', Lambda, '\\n\\nMatrix Q with eigenvectors as columns:\\n', Q)\n",
+    "        print('\\nSo A = Q * Lambda * Q.T:\\n', np.matmul(Q, np.matmul(Lambda, np.transpose(Q))))\n",
+    "    else:\n",
+    "        print(\"Error! eigenvalue_decomposition only supports 2x2 matrices!\")\n",
+    "        \n",
+    "        \n",
+    "eigenvalues_of_A = eigenvalues(A)\n",
+    "print(\"Q:\\n\", Q)\n",
+    "print(\"v:\\n\", Q[0])\n",
+    "print(\"|v|:\\n\", np.linalg.norm(Q[0]))\n",
     "\n",
-    "        print('\\nSo A = Q * Lambda * Q.T:\\n',Q * Lambda * np.transpose(Q))\n",
+    "# compare to np.linalg.eig:\n",
+    "eigval, eigvec = np.linalg.eig(A.T)\n",
+    "print(\"numpy eigval\", eigval)\n",
+    "print(\"numpy eigvec:\", eigvec)\n",
     "\n",
-    "    \n",
-    "A = 1/4 * np.matrix([[7, -sqrt(3)], [-sqrt(3), 5]])\n",
     "eigenvalue_decomposition(A)\n",
-    "\n"
+    "print(\"A\\n\", A)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Q: [[ 0.8660254 -0.5      ]\n",
-      " [-0.5       -0.8660254]]\n",
-      "v: [ 0.8660254 -0.5      ]\n",
-      "|v|: 1.0\n",
-      "eigval [ 2.  1.]\n",
-      "eigvec: [[ 0.8660254  0.5      ]\n",
-      " [-0.5        0.8660254]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# find eigenvectors\n",
     "def eigenvectors(matrix, eigenvals):\n",
@@ -193,18 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-40-2440420ed11d>, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-2440420ed11d>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    x_1 =\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Diagonalmatrix\n",
     "V = np.zeros((2,2), int)\n",
@@ -227,21 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "polynomial() missing 1 required positional argument: 'x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-c1a2ea8f0286>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpolynomial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf_coeff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0mf_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: polynomial() missing 1 required positional argument: 'x'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -289,18 +380,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0.]\n",
-      " [0. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if Q.T * Q = I then Q is orthonormal \n",
     "# (normalized Eigenvectors)\n",
@@ -316,20 +398,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.625      0.21650635]\n",
-      " [0.21650635 0.875     ]]\n",
-      "[[0.625      0.21650635]\n",
-      " [0.21650635 0.875     ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q * V^-1 * Q.T = A^-1\n",
     "print((Q.dot(np.linalg.inv(V))).dot(np.transpose(Q)))\n",
@@ -345,18 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "60.0\n",
-      "31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_1 = [24, 3, 2, 31]\n",
     "x_2 = [27, 20, 26, 21]\n",
@@ -407,18 +469,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.0\n",
-      "6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A in C umbenannt\n",
     "C = [[3.5, np.sqrt(3)/2],\n",
@@ -440,23 +493,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 3.  1.]\n",
-      " [ 1.  3.]]\n",
-      "6.0\n",
-      "8.0\n",
-      "eigenvalues(A_prime(a_1): [ 4.  2.]\n",
-      "[[  2.00000000e+00   2.22044605e-16]\n",
-      " [  4.44089210e-16   4.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -507,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
