--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -12,85 +12,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## matrix multiplication"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "matrixA\n",
-      " [[2 1]]\n",
-      "dimsA (1, 2)\n",
-      "matrixB\n",
-      " [[2 1 1]\n",
-      " [3 2 3]]\n",
-      "dimsB (2, 3)\n",
-      "Multipling matrices...\n",
-      "C\n",
-      " [[ 0.  0.  0.]]\n",
-      "C_correct\n",
-      " [[7 4 5]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def matrixMultiplication(matrixA, matrixB):\n",
-    "    dimsA = np.shape(matrixA)\n",
-    "    dimsB = np.shape(matrixB)\n",
-    "    print(\"matrixA\\n\", matrixA)\n",
-    "    print(\"dimsA\", dimsA)\n",
-    "    print(\"matrixB\\n\", matrixB)\n",
-    "    print(\"dimsB\", dimsB)\n",
-    "    if(dimsA[1] != dimsB[0]):\n",
-    "        print(\"Error. Matrix dimensions do not fit!\")\n",
-    "    else:\n",
-    "        print(\"Multipling matrices...\")\n",
-    "        # init result matrix with zeros of correct shape\n",
-    "        matrixC = np.zeros((dimsA[0], dimsB[1]))\n",
-    "        \n",
-    "        for rowA in range(0, dimsA[0]):\n",
-    "            for colB in range(0, dimsB[1]):\n",
-    "                for colA in range(0, dimsA[1]):\n",
-    "                    for rowB in range(0, dimsB[0]):\n",
-    "                        matrixC[rowA, colB] += matrixA[rowA, colA] * matrixB[rowB, colB]\n",
-    "                        print(\"C\\n\", matrixC)                        \n",
-    "        return matrixC\n",
-    "    \n",
-    "A = np.array([[2,1],[1,1],[2,1]])\n",
-    "A_1 = np.array([[2,1]])\n",
-    "B = np.array([[2,1,1],\n",
-    "              [3,2,3]])\n",
-    "\n",
-    "C = matrixMultiplication(A_1, B)\n",
-    "\n",
-    "C_correct = np.matmul(A_1, B)\n",
-    "\n",
-    "\n",
-    "print(\"C\\n\", C)\n",
-    "print(\"C_correct\\n\", C_correct)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# Assignment 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +24,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Eigenvalue Decomposition\n",
+    "#### help functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if matrix is quadratic and a 2x2 matrix\n",
+    "def is_2x2_matrix(matrix):\n",
+    "    dim = np.shape(matrix)\n",
+    "    if dim[0] != dim[1]:\n",
+    "        print('Matrix is not quadratic!')\n",
+    "        return False\n",
+    "    elif dim[0] != 2:\n",
+    "        print('Matrix is not a 2x2 matrix!')\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "def matrixMultiplication(matrixA, matrixB):\n",
+    "    dimsA = np.shape(matrixA)\n",
+    "    dimsB = np.shape(matrixB)\n",
+    "    \n",
+    "    #print(\"matrixA\\n\", matrixA)\n",
+    "    #print(\"dimsA\", dimsA)\n",
+    "    #print(\"matrixB\\n\", matrixB)\n",
+    "    #print(\"dimsB\", dimsB)\n",
+    "    \n",
+    "    if(dimsA[1] != dimsB[0]):\n",
+    "        print(\"Error. Matrix dimensions do not fit!\")\n",
+    "    else:\n",
+    "        # init result matrix with zeros of correct shape\n",
+    "        matrixC = np.zeros((dimsA[0], dimsB[1]))\n",
+    "        \n",
+    "        for rowA in range(0, dimsA[0]):\n",
+    "            for colB in range(0, dimsB[1]):\n",
+    "                for k in range(0, dimsA[1]):\n",
+    "                    matrixC[rowA, colB] += matrixA[rowA, k] * matrixB[k, colB]\n",
+    "        return matrixC\n",
+    "    \n",
+    "#A = np.array([[2,1],[1,1],[2,1]])\n",
+    "#B = np.array([[2,1,1],[3,2,3]])\n",
+    "#C = matrixMultiplication(A , B)\n",
+    "#C_correct = np.matmul(A , B)\n",
+    "#print(\"C\\n\", C)\n",
+    "#print(\"C_correct\\n\", C_correct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Assignment 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Jupyter Notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(d)** It's useful for people who didn't work with jupyter notebooks yet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Eigenvalue Decomposition\n",
     "Given the matrix $A=\\frac{1}{4}\\left[ \\begin{array}{rr}\n",
     "7 & -\\sqrt{3}  \\\\\n",
     "\\sqrt{3} & 5  \\\\\n",
@@ -112,34 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated eigenvalues:\n",
-      " [ 2.  1.]\n",
-      "Q:\n",
-      " [[ 0.8660254 -0.5      ]\n",
-      " [-0.5       -0.8660254]]\n",
-      "v:\n",
-      " [ 0.8660254 -0.5      ]\n",
-      "|v|:\n",
-      " 1.0\n",
-      "numpy eigval [ 2.  1.]\n",
-      "numpy eigvec: [[ 0.8660254  0.5      ]\n",
-      " [-0.5        0.8660254]]\n",
       "Matrix:\n",
       " [[ 1.75      -0.4330127]\n",
       " [-0.4330127  1.25     ]]\n",
-      "Calculated eigenvalues:\n",
-      " [ 2.  1.]\n",
       "\n",
       "Diagonal matrix Lambda with eigenvalues:\n",
-      " [[ 2.  0.]\n",
-      " [ 0.  1.]] \n",
+      " [[2. 0.]\n",
+      " [0. 1.]] \n",
       "\n",
       "Matrix Q with eigenvectors as columns:\n",
       " [[ 0.8660254 -0.5      ]\n",
@@ -147,20 +134,14 @@
       "\n",
       "So A = Q * Lambda * Q.T:\n",
       " [[ 1.75      -0.4330127]\n",
-      " [-0.4330127  1.25     ]]\n",
-      "A\n",
-      " [[ 1.75      -0.4330127]\n",
       " [-0.4330127  1.25     ]]\n"
      ]
     }
    ],
    "source": [
-    "A = 1/4* np.array([[7, -np.sqrt(3)], [-np.sqrt(3), 5]])\n",
-    "identity_matrix = np.array([[1, 0], [0,1]])\n",
-    "# calculate eigenvalues & eigenvectors\n",
-    "# eigenvalues: [2, 1]\n",
-    "# values, vectors = np.linalg.eig(A)\n",
+    "A = 1/4 * np.array([[7, -np.sqrt(3)], [-np.sqrt(3), 5]])\n",
     "\n",
+    "# pq formula\n",
     "def pq_formula(p, q):\n",
     "    p_half = -p/2\n",
     "    sqrt = np.sqrt(p_half**2 - q)\n",
@@ -170,13 +151,7 @@
     "\n",
     "# compute eigenvalues\n",
     "def eigenvalues(matrix):\n",
-    "    # check if matrix is quadratic and a 2x2 matrix\n",
-    "    dim = np.shape(matrix)\n",
-    "    if dim[0] != dim[1]:\n",
-    "        return 'Matrix is not quadratic!'\n",
-    "    elif dim[0] != 2:\n",
-    "        return 'Matrix is not a 2x2 Matrix!'\n",
-    "    else:\n",
+    "    if is_2x2_matrix(matrix):\n",
     "        a = matrix[0,0]\n",
     "        b = matrix[0,1]\n",
     "        c = matrix[1,0]\n",
@@ -187,64 +162,59 @@
     "\n",
     "        eigenvals = pq_formula(p, q)\n",
     "    \n",
-    "        print('Calculated eigenvalues:\\n', eigenvals)\n",
+    "        #print('Calculated eigenvalues:\\n', eigenvals)\n",
     "        return eigenvals\n",
+    "    else:\n",
+    "        print(\"Error! eigenvalues only supports 2x2 matrices!\")\n",
     "\n",
     "# compute eigenvectors\n",
     "def eigenvectors(matrix, eigenvals):\n",
-    "    eigenvec = []\n",
-    "    a = matrix[0,0]\n",
-    "    b = matrix[0,1]\n",
-    "    c = matrix[1,0]\n",
-    "    d = matrix[1,1]\n",
-    "    if(c != 0):\n",
-    "        eigenvec.append([eigenvals[0]-d,c])\n",
-    "        eigenvec.append([eigenvals[1]-d,c])\n",
-    "    elif (b != 0):\n",
-    "        eigenvec.append([b,eigenvals[0] - a])\n",
-    "        eigenvec.append([b,eigenvals[1] - a])\n",
-    "    else:\n",
-    "        eigenvec.append([1,0])\n",
-    "        eigenvec.append([0,1])\n",
-    "    \n",
-    "    # print(\"before scaling:\", eigenvec)\n",
-    "    for eigvec in eigenvec:\n",
-    "        length = np.sqrt(eigvec[0]**2+eigvec[1]**2)\n",
-    "        eigvec[0] /= length\n",
-    "        eigvec[1] /= length\n",
-    "    # print(\"after scaling:\", eigenvec)\n",
-    "    return eigenvec\n",
+    "    if is_2x2_matrix(matrix):\n",
+    "        eigenvec = []\n",
+    "        a = matrix[0,0]\n",
+    "        b = matrix[0,1]\n",
+    "        c = matrix[1,0]\n",
+    "        d = matrix[1,1]\n",
+    "        if c != 0:\n",
+    "            eigenvec.append([eigenvals[0]-d,c])\n",
+    "            eigenvec.append([eigenvals[1]-d,c])\n",
+    "        elif b != 0:\n",
+    "            eigenvec.append([b,eigenvals[0] - a])\n",
+    "            eigenvec.append([b,eigenvals[1] - a])\n",
+    "        else:\n",
+    "            eigenvec.append([1,0])\n",
+    "            eigenvec.append([0,1])\n",
     "\n",
-    "def is_2x2_matrix(matrix):\n",
-    "    # check if matrix is quadratic and a 2x2 matrix\n",
-    "    dim = np.shape(matrix)\n",
-    "    if dim[0] != dim[1]:\n",
-    "        print('Matrix is not quadratic!')\n",
-    "        return False\n",
-    "    elif dim[0] != 2:\n",
-    "        print('Matrix is not a 2x2 Matrix!')\n",
-    "        return False\n",
+    "        # print(\"before scaling:\", eigenvec)\n",
+    "        for eigvec in eigenvec:\n",
+    "            length = np.sqrt(eigvec[0]**2+eigvec[1]**2)\n",
+    "            eigvec[0] /= length\n",
+    "            eigvec[1] /= length\n",
+    "        # print(\"after scaling:\", eigenvec)\n",
+    "        return eigenvec\n",
     "    else:\n",
-    "        return True\n",
+    "        print(\"Error! eigenvectors only supports 2x2 matrices!\")\n",
     "    \n",
     "# compute eigenvalue decomposition\n",
     "def eigenvalue_decomposition(matrix):\n",
     "    print('Matrix:\\n', matrix)\n",
-    "    if(is_2x2_matrix(matrix)):\n",
+    "    if is_2x2_matrix(matrix):\n",
     "        # compute eigenvalues\n",
     "        values = eigenvalues(matrix)\n",
-    "        \n",
     "        # compute eigenvectors\n",
     "        vectors = eigenvectors(matrix, values)\n",
     "        \n",
     "        Lambda = np.diag(values)\n",
     "        Q = np.array(vectors)\n",
+    "        \n",
     "        print('\\nDiagonal matrix Lambda with eigenvalues:\\n', Lambda, '\\n\\nMatrix Q with eigenvectors as columns:\\n', Q)\n",
-    "        print('\\nSo A = Q * Lambda * Q.T:\\n', np.matmul(Q, np.matmul(Lambda, np.transpose(Q))))\n",
+    "        print('\\nSo A = Q * Lambda * Q.T:\\n', matrixMultiplication(Q, matrixMultiplication(Lambda, np.transpose(Q))))\n",
+    "        return Q\n",
     "    else:\n",
     "        print(\"Error! eigenvalue_decomposition only supports 2x2 matrices!\")\n",
     "        \n",
-    "        \n",
+    "\n",
+    "'''\n",
     "eigenvalues_of_A = eigenvalues(A)\n",
     "print(\"Q:\\n\", Q)\n",
     "print(\"v:\\n\", Q[0])\n",
@@ -254,9 +224,8 @@
     "eigval, eigvec = np.linalg.eig(A.T)\n",
     "print(\"numpy eigval\", eigval)\n",
     "print(\"numpy eigvec:\", eigvec)\n",
-    "\n",
-    "eigenvalue_decomposition(A)\n",
-    "print(\"A\\n\", A)\n"
+    "'''\n",
+    "Q = eigenvalue_decomposition(A)\n"
    ]
   },
   {
@@ -546,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
