Added part b of the second question

--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -229,140 +229,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# find eigenvectors\n",
-    "def eigenvectors(matrix, eigenvals):\n",
-    "    eigenvec = []\n",
-    "    a = matrix[0,0]\n",
-    "    b = matrix[0,1]\n",
-    "    c = matrix[1,0]\n",
-    "    d = matrix[1,1]\n",
-    "    if(c != 0):\n",
-    "        eigenvec.append([eigenvals[0]-d,c])\n",
-    "        eigenvec.append([eigenvals[1]-d,c])\n",
-    "    elif (b != 0):\n",
-    "        eigenvec.append([b,eigenvals[0] - a])\n",
-    "        eigenvec.append([b,eigenvals[1] - a])\n",
+    "#### (b) Show that the columns of Q are orthonormal, i.e. the columns are of unit length and orthogonal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q:\n",
+      " [[ 0.8660254 -0.5      ]\n",
+      " [-0.5       -0.8660254]]\n",
+      "The columns of the matrix are orthonomal!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compute the dot product of two vectors\n",
+    "def dot_product(vec1, vec2):\n",
+    "    dim_vec1 = np.shape(vec1)\n",
+    "    dim_vec2 = np.shape(vec2)\n",
+    "    # check if vectors have same dimension\n",
+    "    if dim_vec1 != dim_vec2:\n",
+    "        print('Input vectors have not the same dimension!')\n",
     "    else:\n",
-    "        eigenvec.append([1,0])\n",
-    "        eigenvec.append([0,1])\n",
+    "        scalar = 0\n",
+    "        for i in range(0, dim_vec1[0]):\n",
+    "            scalar += vec1[i] * vec2[i]\n",
+    "        return round(scalar,2)\n",
     "    \n",
-    "    # print(\"before scaling:\", eigenvec)\n",
-    "    for eigvec in eigenvec:\n",
-    "        length = np.sqrt(eigvec[0]**2+eigvec[1]**2)\n",
-    "        eigvec[0] /= length\n",
-    "        eigvec[1] /= length\n",
-    "    # print(\"after scaling:\", eigenvec)\n",
-    "    return eigenvec\n",
+    "# compute the length of a vector\n",
+    "def vec_length(col):\n",
+    "    dim = np.shape(col)\n",
+    "    # check if input is a column\n",
+    "    if len(dim) != 1:\n",
+    "        print('Input is not a column!')\n",
+    "        return False\n",
+    "    else:\n",
+    "        x = 0\n",
+    "        for i in range(0,dim[0]):\n",
+    "            x += col[i]**2\n",
+    "        return np.sqrt(x)\n",
     "\n",
-    "\n",
-    "Q = np.array(eigenvectors(A, eigenvalues_of_A))\n",
-    "\n",
-    "print(\"Q:\", Q)\n",
-    "print(\"v:\", Q[0])\n",
-    "print(\"|v|:\", np.linalg.norm(Q[0]))\n",
-    "\n",
-    "# compare to np.linalg.eig:\n",
-    "eigval, eigvec = np.linalg.eig(A.T)\n",
-    "print(\"eigval\", eigval)\n",
-    "print(\"eigvec:\", eigvec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Diagonalmatrix\n",
-    "V = np.zeros((2,2), int)\n",
-    "np.fill_diagonal(V,values)\n",
-    "\n",
-    "# recreate A\n",
-    "\n",
-    "def dot_product(matrix_A, matrix_B):\n",
-    "    matrix_temp = np.zeros((2,2))\n",
-    "    print(matrix_temp)\n",
+    "# check if columns of a 2x2 matrix are orthonormal\n",
+    "def orthonormal_columns(matrix):\n",
+    "    # dimension of input matrix\n",
+    "    dim = np.shape(matrix)\n",
     "    \n",
-    "    return 0\n",
+    "    if is_2x2_matrix(matrix):\n",
+    "        # check if columns are of unit length\n",
+    "        for j in range(0,dim[1]):\n",
+    "            if vec_length(matrix[:,j]) != 1:\n",
+    "                print('Columns of the matrix are not of unit length!')\n",
+    "                return False\n",
     "\n",
-    "print(\"dot_product:\",dot_product(1,1))\n",
-    "\n",
-    "\n",
-    "B = np.dot(np.dot(Q,V), np.transpose(Q))\n",
-    "print(\"B: \", B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "def dx(f, x):\n",
-    "    return abs(0-f(x))\n",
-    " \n",
-    "def newtons_method(f, df, x0, e):\n",
-    "    delta = dx(f, x0)\n",
-    "    while delta > e:\n",
-    "        x0 = x0 - f(x0)/df(x0)\n",
-    "        delta = dx(f, x0)\n",
-    "    print('Root is at: ', x0)\n",
-    "    print('f(x) at root is: ', f(x0))\n",
-    "\n",
-    "\n",
-    "def polynomial(coeffs, x):    \n",
-    "    value = 0\n",
-    "    x_exp = 1\n",
-    "    for coeff in coeffs:\n",
-    "        value += coeff * x_exp\n",
-    "        x_exp *= x\n",
-    "    return value\n",
+    "        # check if columns are orthognal\n",
+    "        if dot_product(matrix[:,0], matrix[:,1]) == 0:\n",
+    "            print('The columns of the matrix are orthonomal!')\n",
+    "            return True\n",
+    "        else:\n",
+    "            print('The columns of the matrix are not orthonomal!')\n",
+    "            return False\n",
+    "    else:\n",
+    "        print(\"Error! orthornomal_columns only supports 2x2 matrices!\")\n",
     "        \n",
-    "f_coeff =  [1, 2]\n",
-    "\n",
-    "x = 2\n",
-    "\n",
-    "f = polynomial(f_coeff)\n",
-    "f_1 = f(x)\n",
-    "\n",
-    "plt.plot(f_1)\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "print(\"f_1: \", f_1)"
+    "print('Q:\\n',Q)\n",
+    "orthonormal_columns(Q)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b) Show that the columns of Q are orthonormal, i.e. the columns are of unit length and orthogonal."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if Q.T * Q = I then Q is orthonormal \n",
-    "# (normalized Eigenvectors)\n",
-    "print(np.transpose(Q).dot(Q))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## c) Show that the matrix $QΛ^{-1}Q^T$ is the inverse of A "
+    "#### (c) Show that the matrix $QΛ^{-1}Q^T$ is the inverse of A "
    ]
   },
   {
@@ -380,7 +336,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Vector Norms"
+    "#### (d)  TODO feedback\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Vector Norms"
    ]
   },
   {
