Finished second exercise.

--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +208,8 @@
     "        Q = np.array(vectors)\n",
     "        \n",
     "        print('\\nDiagonal matrix Lambda with eigenvalues:\\n', Lambda, '\\n\\nMatrix Q with eigenvectors as columns:\\n', Q)\n",
-    "        print('\\nSo A = Q * Lambda * Q.T:\\n', matrixMultiplication(Q, matrixMultiplication(Lambda, np.transpose(Q))))\n",
-    "        return Q\n",
+    "        print('\\nSo A = Q * Lambda * Q.T:\\n', matrixMultiplication(matrixMultiplication(Q, Lambda) , np.transpose(Q)))\n",
+    "        return Lambda, Q\n",
     "    else:\n",
     "        print(\"Error! eigenvalue_decomposition only supports 2x2 matrices!\")\n",
     "        \n",
@@ -225,7 +225,7 @@
     "print(\"numpy eigval\", eigval)\n",
     "print(\"numpy eigvec:\", eigvec)\n",
     "'''\n",
-    "Q = eigenvalue_decomposition(A)\n"
+    "Lambda, Q = eigenvalue_decomposition(A)\n"
    ]
   },
   {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,8 @@
      "text": [
       "Q:\n",
       " [[ 0.8660254 -0.5      ]\n",
-      " [-0.5       -0.8660254]]\n",
+      " [-0.5       -0.8660254]] \n",
+      "\n",
       "The columns of the matrix are orthonomal!\n"
      ]
     },
@@ -256,7 +257,7 @@
        "True"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +311,7 @@
     "    else:\n",
     "        print(\"Error! orthornomal_columns only supports 2x2 matrices!\")\n",
     "        \n",
-    "print('Q:\\n',Q)\n",
+    "print('Q:\\n',Q, '\\n')\n",
     "orthonormal_columns(Q)"
    ]
   },
@@ -323,20 +324,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q:\n",
+      " [[ 0.8660254 -0.5      ]\n",
+      " [-0.5       -0.8660254]] \n",
+      "\n",
+      "Lambda:\n",
+      " [[2. 0.]\n",
+      " [0. 1.]] \n",
+      "\n",
+      "Inverse of Lambda:\n",
+      " [[ 0.5 -0. ]\n",
+      " [-0.   1. ]] \n",
+      "\n",
+      "A:\n",
+      " [[ 1.75      -0.4330127]\n",
+      " [-0.4330127  1.25     ]] \n",
+      "\n",
+      "Inverse of A:\n",
+      " [[0.625      0.21650635]\n",
+      " [0.21650635 0.875     ]] \n",
+      "\n",
+      "\n",
+      "So inv(A) = Q * inv(Lambda) * Q.T:\n",
+      " [[0.625      0.21650635]\n",
+      " [0.21650635 0.875     ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Q * V^-1 * Q.T = A^-1\n",
-    "print((Q.dot(np.linalg.inv(V))).dot(np.transpose(Q)))\n",
-    "print(np.linalg.inv(A))"
+    "# calculate inverse for a 2x2 matrix\n",
+    "def inverse(matrix):\n",
+    "    if is_2x2_matrix(matrix):\n",
+    "        a = matrix[0,0]\n",
+    "        b = matrix[0,1]\n",
+    "        c = matrix[1,0]\n",
+    "        d = matrix[1,1]\n",
+    "        \n",
+    "        inv = 1 /(a*d-b*c) * np.array([[d, -b], [-c, a]])\n",
+    "    \n",
+    "        return inv\n",
+    "    else:\n",
+    "        print(\"Error! inverse only supports 2x2 matrices!\")\n",
+    "\n",
+    "print('Q:\\n',Q, '\\n')\n",
+    "print('Lambda:\\n',Lambda, '\\n')\n",
+    "print('Inverse of Lambda:\\n', inverse(Lambda), '\\n')\n",
+    "\n",
+    "print('A:\\n', A, '\\n')\n",
+    "# inverse of A\n",
+    "print('Inverse of A:\\n', inverse(A), '\\n')\n",
+    "# result with matrix multiplication\n",
+    "print('\\nSo inv(A) = Q * inv(Lambda) * Q.T:\\n', matrixMultiplication( matrixMultiplication(Q, inverse(Lambda)),np.transpose(Q)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (d)  TODO feedback\n"
+    "**(d)** We invested approximately 4 hours for this exercise. It was time consuming to code all the simple things on our own."
    ]
   },
   {
