Started LU decomposition but not finished

--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scipy.linalg as la"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,12 +320,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (c) Show that the matrix $QΛ^{-1}Q^T$ is the inverse of A "
+    "#### (c) Show that the matrix $QΛ^{-1}Q^T$ is the inverse of A."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -389,6 +390,94 @@
    "metadata": {},
    "source": [
     "**(d)** We invested approximately 4 hours for this exercise. It was time consuming to code all the simple things on our own."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Matrix Inversion\n",
+    "Given the matrix $A=\\left[ \\begin{array}{rr}\n",
+    "3 & 4  \\\\\n",
+    "6 & 13  \\\\\n",
+    "\\end{array}\\right]$.\n",
+    "\n",
+    "#### (a) Compute $LU$ decomposition of it, i.e. $A = L * U$, where *L* is a lowertriangular matrix and *U* is an uppertriangular matrix. Use this decomposition to solve $A*x = b$ with $b = (1, 2)^T$ via forward and backward substitution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([[0., 1.],\n",
+      "       [1., 0.]]), array([[1. , 0. ],\n",
+      "       [0.5, 1. ]]), array([[ 6. , 13. ],\n",
+      "       [ 0. , -2.5]]))\n",
+      "[[ 3  4]\n",
+      " [ 6 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def lu_decomposition(matrix):\n",
+    "    dim = np.shape(matrix)\n",
+    "    #L = matrix.copy()\n",
+    "    #U = np.ones((dim[0], dim[1]))\n",
+    "    for i in range(1,dim[0]-1): \n",
+    "        print('i: ', i)\n",
+    "        for k in range(i+1, dim[0]):\n",
+    "            print('k: ', k)\n",
+    "\n",
+    "            # calculate L\n",
+    "            matrix[k,i] = matrix[k,i] / matrix[i,i]\n",
+    "              \n",
+    "            for j in range(i+1, dim[0]):\n",
+    "                # calculate U\n",
+    "                matrix[k,j] = matrix[k,j] - matrix[k,i] * matrix[i,j]\n",
+    "    \n",
+    "    return matrix\n",
+    "\n",
+    "\n",
+    "\n",
+    "A = np.array([[3, 4], [6, 13]])\n",
+    "\n",
+    "\n",
+    "print(sc.linalg.lu(A))\n",
+    "\n",
+    "print(lu_decomposition(A))\n",
+    "\n",
+    "\n",
+    "#L, U = lu_decomposition(A)\n",
+    "#print(matrixMultiplication(L,U))\n",
+    "\n",
+    "\n",
+    "b = np.array([1,2])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (b) Use Gauss elimination to explicitly calculate the inverse of $A$ and show that it yields the same solution $x = A^{-1}* b$ from part (a)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (c) TODO feedback"
    ]
   },
   {
